@@ -39,3 +39,15 @@ while(val):
    val=file.GetNextEntry()
 val=None
 
+print "##############################################################"
+val=file.GetFirstEntry()
+while(val):
+   if(isinstance(val,gdcm.ValEntryPtr)):
+      print "Val %04d|%04d [%s] : %s" % (val.GetGroup(),val.GetElement(),
+                                         val.GetName(),val.GetValue())
+   else:
+      print "Bin %04d|%04d [%s] : %s" % (val.GetGroup(),val.GetElement(),
+                                         val.GetName(),val.GetValue())
+   val=file.GetNextEntry()
+val=None
+
